M2-AUT T5: DTO authoring (StepInput/CaseSummary/ThreeWayDiff) + regen OpenAPI
